Fixed formatting of summary page: - sections with multiple span elements have row-display with 5px gap instead of previous column style

--- a/summary.css
+++ b/summary.css
@@ -67,7 +67,8 @@
 
 #summary-wrapper .summary-body .content-div {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 	gap: 5px;
